--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -30,6 +30,7 @@ dl.sub-nav {
 
 .top-bar {
   background: #000000;
+
   a {
     text-decoration: none;
   }
@@ -37,10 +38,14 @@ dl.sub-nav {
     text-decoration: underline;
   }
 
+  @media #{$medium-up} {
+    height: auto;
+  }
+
   .top-bar-section {
     li {
       @media screen and (max-width: upper-bound($small-range)) {
-        padding-left:15px;
+        padding-left: 15px;
       }
       background-color: transparent;
 
@@ -59,21 +64,38 @@ dl.sub-nav {
         }
       }
 
+
       &:last-child {
         a, span {
           padding-right: 0;
+
+          @media screen and (max-width: upper-bound($medium-range)) {
+            padding-right: 15px;
+          }
         }
       }
     }
   }
   .title-area {
-    h1 > a {
-      background: asset_url('crest.png') no-repeat 0% 40%;
-      padding-left: 30px;
-      vertical-align: middle;
-      @media screen and (max-width: upper-bound($medium-range)) {
-        background: asset_url('crest.png') no-repeat 15px 40%;
-        padding-left:45px;
+    h1 {
+      white-space: nowrap;
+
+      > a {
+        display: inline-block;
+        background: asset_url('crest.png') no-repeat 0% 40%;
+        padding-left: 30px;
+        vertical-align: middle;
+        width: auto;
+
+        @media screen and (max-width: upper-bound($medium-range)) {
+          background: asset_url('crest.png') no-repeat 15px 40%;
+          padding-left: 45px;
+        }
+      }
+
+      > span {
+        display: inline-block;
+        float: none;
       }
     }
   }
